fix: projects page banner height flickering

--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -1,5 +1,5 @@
 .dashboard {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 
@@ -9,8 +9,12 @@
     justify-content: center;
     flex-direction: column;
     gap: 10px;
-    height: 300px;
+    padding: 30px;
     background-color: var(--main-color);
+
+    @media (min-width: 500px) {
+      padding: 50px;
+    }
 
     & > h1 {
       color: white;
